--- a/html/index.html
+++ b/html/index.html
@@ -8,15 +8,16 @@
     <script src="https://kit.fontawesome.com/57e361edfe.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="css/style.css">
-
     <script src="js/watch.js"></script>
     <script src="js/moviment.js"></script>
+
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
     <div id="watch">
+        <div id="glass" style="pointer-events:none;"></div>
 
         <button class="time" onclick="time()">
             22<br>00
