--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
                 <div class="timev2">12:00</div>
 
                 <button class="player" onclick="player()"><i class="fas fa-play"></i></button>
-                <button class="stop" onclick="pause()"><i class="fas fa-pause"></i></button>
+                <button class="stop" onclick="pause()" ondblclick="stopMusic()"><i class="fas fa-pause"></i></button>
 
                 <div class="navplayer">
                     <div class="less" onclick="less()"><b>-</b></div>
