--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
 
                 <div class="navplayer">
                     <div class="less" onclick="less()"><b>-</b></div>
-                    <div class="timeplay" onclick="timeplay()">0:00 / 0:00</div>
+                    <div id="timeplay" onclick="timeplay()">0:00 / 0:00</div>
                     <div class="plus" onclick="plus()"><b>+</b></div>
                 </div>
 
