--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,8 @@
         <div id="content">
 
             <div id="activity">
+                <div id="backanimated"></div>
+
                 <div id="title">Atividades</div>
                 <div class="timev2">12:00</div>
 
@@ -37,6 +39,8 @@
             </div>
 
             <div id="passaport">
+                <div id="backanimated"></div>
+
                 <div id="title">Meus Dados</div>
                 <div class="timev2">12:00</div>
 
@@ -53,6 +57,8 @@
             </div>
 
             <div id="music">
+                <div id="backanimated"></div>
+
                 <div id="title">Music</div>
                 <div class="timev2">12:00</div>
 
@@ -69,13 +75,24 @@
             </div>
 
             <div id="gps">
+                <div id="backanimated"></div>
+
                 <div id="title">GPS</div>
                 <div class="timev2">12:00</div>
+
+                <div id="map"></div>
+                <div id="iconmap"><i class="fas fa-map-marker-alt"></i></div>
+
+                <div class="gps" onclick="gpsshow()">
+                    <div id="text">ACESSAR</div>
+                </div>
 
                 <div id="dots4" style="background: rgba(196, 196, 196);"></div>
             </div>
 
             <div id="settings">
+                <div id="backanimated"></div>
+
                 <div id="title">Config</div>
                 <div class="timev2">12:00</div>
 
